# my-openenv

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: __init__.py  app.py  sql_environment.py  tasks.py
